test/extra/negative/outOfRangeSelect.net
INPUT a
OUTPUT r
VAR a:4, r
IN
r = SELECT 5 a
